LIST OF CHANGES FOR NPG-QC PACKAGE

release 57.9
 - autoqc results collection class - add a method for inferring whether
     a lane has plexes from results themselves
 - SeqQC - steps towards making display of autoqc results and manual qc process
   independent of availability of warehouse data:
    - use the new collection method to decide whether to display a link to
       plex results (previously warehouse data were used for this)
    - if plex results are available, always display a link to them
 - SeqQC - remove vestigial code for batch id retrieval 
 - SeqQC build: remove --linkable-bcviz-path option since dependency on bcviz
   is now managed by bower
 - SeqQC: Ajax controller removed (was used as a proxy for now discontinued
   requests to LIMs web server)
 - following restructuring of bcviz, amend statements for import of bcviz libraries
 - changes to allow genotype checks to be run on cram files
 - list of human references (with chr.naming convention) used by genotype check
     moved to file in the genotype repository
 - GRCh38 human references added to the list
 - gt_utils (gt_pack and find_gt_match C programs) added to Build install

release 57.8.1
 - add temporary file name option to bamtofastq command

release 57.8
 - Using bower to manage javascript component dependencies.
 - Using bcviz v1.1.0 which now supports bower.
 - use Biobambam bamtofastq in place of Picard utility in adapter qc check

release 57.7
 - removed redundant methods from NpgDB model
 - New javascript functionality to process mqc. MQC outcomes are changed using AJAX 
   calls to the controller directly.
 - mqc controller now provides with the functionality for mqc through asynchronous calls.
 - mqc controller does not saves a log in the tracking database when mqc outcomes are
   updated.

release 57.6
 - Added mqc_outcome_reporter
 - Added a new column to the mqc entity and historic table to keep separate track of who