@@ -16,31 +16,35 @@ my $class = npg_tracking::util::build->subclass(code => <<'EOF');
     my $self = shift;
     $self->SUPER::ACTION_build;
 
-    make_path $norm_fit_build_dir;
-    `make --directory $norm_fit_dir`;
-    $self->copy_if_modified(from    => "$norm_fit_build_dir/norm_fit",
+    if (!$ENV{'NPG_QC_WEB_INSTALL'}) {
+      make_path $norm_fit_build_dir;
+      `make --directory $norm_fit_dir`;
+      $self->copy_if_modified(from    => "$norm_fit_build_dir/norm_fit",
                             to_dir  => join(q[/], $self->base_dir, 'blib', 'script'),
                             flatten => 1);
 
-    make_path $gt_utils_build_dir;
-    `make --directory $gt_utils_dir`;
-    $self->copy_if_modified(from    => "$gt_utils_build_dir/gt_pack",
+      make_path $gt_utils_build_dir;
+      `make --directory $gt_utils_dir`;
+      $self->copy_if_modified(from    => "$gt_utils_build_dir/gt_pack",
                             to_dir  => join(q[/], $self->base_dir, 'blib', 'script'),
                             flatten => 1);
-    $self->copy_if_modified(from    => "$gt_utils_build_dir/find_gt_match",
+      $self->copy_if_modified(from    => "$gt_utils_build_dir/find_gt_match",
                             to_dir  => join(q[/], $self->base_dir, 'blib', 'script'),
                             flatten => 1);
+    }
   }
 
   sub ACTION_clean {
     my $self = shift;
     $self->SUPER::ACTION_clean;
 
-    `make clean --directory $norm_fit_dir`;
-    remove_tree $norm_fit_build_dir;
+    if (!$ENV{'NPG_QC_WEB_INSTALL'}) {
+      `make clean --directory $norm_fit_dir`;
+      remove_tree $norm_fit_build_dir;
 
-    `make clean --directory $gt_utils_dir`;
-    remove_tree $gt_utils_build_dir;
+      `make clean --directory $gt_utils_dir`;
+      remove_tree $gt_utils_build_dir;
+    }
   }
 
   sub ACTION_install {
