@@ -1,5 +1,10 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - npg_qc build for web server does not compile executables
+ - functionality of the util package in SeqQC merged into the rpt_key autoqc role,
+     the package removed
+ - api::error package moved to Util::Error
+
 release 57.9
  - autoqc results collection class - add a method for inferring whether
      a lane has plexes from results themselves
